syntax = "proto3";

option java_package = "org.zxkill.nori.settings.datastore";
option java_multiple_files = true;

enum SpeechOutputDevice {
  SPEECH_OUTPUT_DEVICE_UNSET = 0;
  SPEECH_OUTPUT_DEVICE_NOTHING = 1;
  SPEECH_OUTPUT_DEVICE_TOAST = 2;
  SPEECH_OUTPUT_DEVICE_SNACKBAR = 3;
  SPEECH_OUTPUT_DEVICE_ANDROID_TTS = 4;
}
