syntax = "proto3";

option java_package = "org.zxkill.nori.settings.datastore";
option java_multiple_files = true;

enum Theme {
  THEME_SYSTEM = 0;
  THEME_SYSTEM_DARK_BLACK = 1;
  THEME_LIGHT = 2;
  THEME_DARK = 3;
  THEME_BLACK = 4;
}
