syntax = "proto3";

import "theme.proto";
import "language.proto";
import "speech_output_device.proto";

option java_package = "org.zxkill.nori.settings.datastore";
option java_multiple_files = true;

message UserSettings {
    Theme theme = 1;
    reserved 2;
    Language language = 3;
    reserved 4;
    SpeechOutputDevice speech_output_device = 5;
    map<string, bool> enabled_skills = 7;
    reserved 8;
    reserved 9;
    // Время отображения результата скилла на экране в секундах
    int32 skill_output_display_seconds = 10;
    // Показывать ли отладочное превью камеры рядом с глазами
    bool face_tracking_debug = 11;
}
